--- a/FRONT/public/index.html
+++ b/FRONT/public/index.html
@@ -20,6 +20,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
       <script src="<%= BASE_URL %>tinymce_6.8.2/tinymce/js/tinymce/tinymce.min.js"> </script>
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <noscript>
